--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang = "pt-br">
     <head>
         <meta charset="UTF-8">
@@ -20,6 +20,20 @@
             <p id="missao"><em>Nossa missão é: <strong>"Proporcionar novidades e qualidade para suas fotográfias, tanto profissionais ou não.
                 <p>Oferecemos profissionais experientes e antenados ás mudanças no mercado fotográfico.</p>
             </strong></em>
+        </div>
+
+        <div class="Itens">
+            <h3 class="titulo-centralizado">Itens</h3>
+
+            <ul>
+                <li class="itens">Câmeras analógicas</li>
+                <li class="itens">Câmeras digitais</li>
+                <li class="itens">Acessórios</li>
+                <li class="itens">Sobre</li>
+                <li class="itens">Contato</li>
+            </ul>
+
+        <img src="Camera-Instantanea.png" class="imagemitens">
         </div>
     </body>
 </html>
