--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang = "pt-br">
     <head>
         <meta charset="UTF-8">
         <title>LU CÂMERAS</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="reset.css">
     </head>
 
     <body>
         <header>
             <h1 class="titulo-principal">LU CÂMERAS</h1>
         </header>
-        <img id="lu câmeras" src="camera-analogica.webp">
+        <img id="Cameras-set" src="camera-analogica.webp">
         <div class="principal">
 
             <h2 class="titulo-centralizado">SOBRE A LU CÂMERAS</h2>
