--- a/produtos.html
+++ b/produtos.html
@@ -10,8 +10,33 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img id="imagem-prod" src=""
-            </div>
+                <h1><img id="imagem-prod" src="camera.polaroid.jpg"></h1>
+
+                <nav>
+                    <ul>
+                        <li>><a href="index.html">Home</a></li>
+                        <li>><a href="produtos.html">Produtos</a></li>
+                        <li>><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+             </div>
         </header>
+
+        <main>
+            <ul class="produtos">
+                <li>
+                    <h2>Câmeras</h2>
+                    <img src="logo1.jpg" class="imagemcam">
+                    <p>Ánalogicas ou Digitais</p>
+                    <p class="produto-preco">R$400 á 1000</p>
+                </li>
+                <li>
+                    <h2>Acessórios</h2>
+                    <img src="aces2.png" class="acesimagem">
+                    <p>Essenciais e extras</p>
+                    <p></p>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
