--- a/produtos.html
+++ b/produtos.html
@@ -34,9 +34,20 @@
                     <h2>Acessórios</h2>
                     <img src="aces2.png" class="acesimagem">
                     <p>Essenciais e extras</p>
-                    <p></p>
+                    <p class="produto-preco">R$ 200 á 600</p>
+                </li>
+                <li>
+                    <h2>Personalização</h2>
+                    <img src="logo.webp" class="person-imagem">
+                    <p>Personalizar sua Câmera</p>
+                    <p class="produto-preco">R$ 350,00</p>
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img id="imagem-rodape" src="instax.webp">
+            <p class="copyright">&copy; Copyright LU CÃMERAS - 2024</p>
+        </footer>
     </body>
 </html>
