--- a/produtos.html
+++ b/produtos.html
@@ -32,7 +32,7 @@
                 </li>
                 <li>
                     <h2>Acessórios</h2>
-                    <img src="aces2.png" class="acesimagem">
+                    <img src="aces.png" class="acesimagem">
                     <p>Essenciais e extras</p>
                     <p class="produto-preco">R$ 200 á 600</p>
                 </li>
