--- a/produtos.html
+++ b/produtos.html
@@ -10,13 +10,13 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img id="imagem-prod" src="camera.polaroid.jpg"></h1>
+                <h1><img id="imagem-prod" src="logo.jpg"></h1>
 
                 <nav>
                     <ul>
-                        <li>><a href="index.html">Home</a></li>
-                        <li>><a href="produtos.html">Produtos</a></li>
-                        <li>><a href="contato.html">Contato</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
              </div>
@@ -45,9 +45,9 @@
             </ul>
         </main>
 
-        <footer>
-            <img id="imagem-rodape" src="instax.webp">
+         <footer>
+            <img id="imagem-rodape" src="final.jpg">
             <p class="copyright">&copy; Copyright LU CÃMERAS - 2024</p>
-        </footer>
+         </footer>
     </body>
 </html>
